--- a/data/data-pool/fund.html
+++ b/data/data-pool/fund.html
@@ -544,7 +544,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150301"><div><span>150301 证券股A</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150302"><div><span>150302 证券股B</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150303"><div><span>150303 创业股A</span></div></a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150304"><div><span>150304 创业股B</span></div></a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150304"><div><span>150304 *创业股B</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150305"><div><span>150305 养老A</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150306"><div><span>150306 养老B</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150307"><div><span>150307 体育A</span></div></a></li>
