'更新数据；asyncQueue新版API'

--- a/data/data-pool/bond.html
+++ b/data/data-pool/bond.html
@@ -37,7 +37,7 @@
 		<!--
 		-->
 		<div style="margin: 10px 0 0 310px;float: left;height: 50px;width: 185px;">
-			<a href="http://www.cninfo.com.cn/finalpage/2017-04-26/1203391218.PDF" target="_Blank"><img style="height: 50px;width: 185px;" src="/cninfo-new/images/logo66.png" /></a>
+			<a href="http://www.cninfo.com.cn/wechat/tg/tg.html" target="_Blank"><img style="height: 50px;width: 310px;margin-left: -30px;" src="/cninfo-new/images/logo66.png" /></a>
 		</div>
 		<div class="top-search">
 			<form id="topCommonQueryForm" method="get" name="topCommonQueryForm" action="/cninfo-new/fulltextSearch" enctype="multipart/form-data">
@@ -1128,6 +1128,10 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107619">107619 河北1705</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107620">107620 河北1706</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107621">107621 河北1707</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107622">107622 陕西1701</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107623">107623 陕西1702</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107624">107624 陕西1703</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?107625">107625 陕西1704</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?109078">109078 地债1202</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?109080">109080 地债1204</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?109082">109082 地债1206</a></li>
@@ -5393,12 +5397,12 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124735">124735 PR合建投</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124736">124736 PR柳龙投</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124737">124737 PR虞交公</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124738">124738 14安发投</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124738">124738 PR安发投</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124739">124739 PR西塞山</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124740">124740 PR青经开</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124741">124741 14辽鑫诚</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124742">124742 PR贵水02</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124743">124743 14银城投</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124743">124743 PR银城投</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124744">124744 14萧经开</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124745">124745 14武安债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?124746">124746 14贺城投</a></li>
@@ -5695,7 +5699,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127068">127068 14新昌02</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127069">127069 14准国资</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127072">127072 14泾河债</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127073">127073 15铁西债</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127073">127073 15铁暂停</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127074">127074 15铜大江</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127075">127075 15鸡西资</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127076">127076 15宁城投</a></li>
@@ -6051,10 +6055,12 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127473">127473 17慈溪债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127474">127474 17三明国</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127475">127475 17宿开发</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127477">127477 17邳润债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127478">127478 17新交投</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127479">127479 16瀚瑞01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127480">127480 17陂城投</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127481">127481 17京投01</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127482">127482 G17产建1</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127486">127486 17威高新</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?127488">127488 17惠投债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?129807">129807 蓝田债券</a></li>
@@ -6381,10 +6387,12 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?139346">139346 17遂天泰</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?139347">139347 17博山债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?139351">139351 17鄂交Y1</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?139354">139354 17应城债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?139355">139355 16营开02</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?139356">139356 17黔南01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?139359">139359 17襄投债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?139360">139360 17醴陵债</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?139371">139371 17长葛债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?B11011">B11011 15铁建07A</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?B11013">B11013 15铁建07B</a></li>
          </ul>
@@ -6453,7 +6461,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122124">122124 11中化02</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122125">122125 11美兰债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122127">122127 11欧亚债</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122133">122133 11柳化债</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122133">122133 柳化暂停</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122134">122134 11华微债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122138">122138 11桂东01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122143">122143 12亿利01</a></li>
@@ -6467,7 +6475,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122152">122152 12国电02</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122154">122154 12京能02</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122155">122155 12天富债</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122156">122156 12厦工债</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122156">122156 厦债暂停</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122157">122157 12广控01</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122158">122158 12西钢债</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?122159">122159 12亿利02</a></li>
@@ -7789,6 +7797,8 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?143110">143110 G17龙源1</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?143111">143111 17兵器02</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?143112">143112 17兵器03</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?143114">143114 17电投01</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?143115">143115 17电投02</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?143900">143900 17招金Y1</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?143901">143901 17云续Y1</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/bondinfo_n.html?bond_fulltext?B06475">B06475 13包钢02</a></li>
