--- a/data/data-pool/fund.html
+++ b/data/data-pool/fund.html
@@ -37,7 +37,7 @@
 		<!--
 		-->
 		<div style="margin: 10px 0 0 310px;float: left;height: 50px;width: 185px;">
-			<a href="http://www.cninfo.com.cn/finalpage/2017-04-26/1203391218.PDF" target="_Blank"><img style="height: 50px;width: 185px;" src="/cninfo-new/images/logo66.png" /></a>
+			<a href="http://www.cninfo.com.cn/wechat/tg/tg.html" target="_Blank"><img style="height: 50px;width: 310px;margin-left: -30px;" src="/cninfo-new/images/logo66.png" /></a>
 		</div>
 		<div class="top-search">
 			<form id="topCommonQueryForm" method="get" name="topCommonQueryForm" action="/cninfo-new/fulltextSearch" enctype="multipart/form-data">
@@ -544,7 +544,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150301"><div><span>150301 证券股A</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150302"><div><span>150302 证券股B</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150303"><div><span>150303 创业股A</span></div></a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150304"><div><span>150304 *创业股B</span></div></a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150304"><div><span>150304 创业股B</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150305"><div><span>150305 养老A</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150306"><div><span>150306 养老B</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?150307"><div><span>150307 体育A</span></div></a></li>
@@ -628,6 +628,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?168106"><div><span>168106 九泰锐华</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?168108"><div><span>168108 九泰锐诚</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?168109"><div><span>168109 九泰锐兴</span></div></a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?168110"><div><span>168110 九泰锐信</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?168301"><div><span>168301 东海祥龙</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?168401"><div><span>168401 红土定增</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?168501"><div><span>168501 产业升级</span></div></a></li>
@@ -3008,6 +3009,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?002381"><div><span>002381 东海祥瑞A</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?002382"><div><span>002382 东海祥瑞C</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?002383"><div><span>002383 大成趋势</span></div></a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?002384"><div><span>002384 九泰鸿祥服务升级混合</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?002385"><div><span>002385 博时沪深300指数C</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?002386"><div><span>002386 工银中国制造2025</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?002387"><div><span>002387 工银沪港深股票</span></div></a></li>
@@ -4405,6 +4407,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004116"><div><span>004116 嘉实新添瑞</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004118"><div><span>004118 博时裕鹏纯债债券</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004119"><div><span>004119 广发创新驱动混合</span></div></a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004120"><div><span>004120 国富安享货币</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004121"><div><span>004121 兴银现金添利</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004122"><div><span>004122 兴银长益定开债</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004123"><div><span>004123 兴银长盈定开债</span></div></a></li>
@@ -4725,6 +4728,8 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004605"><div><span>004605 富国新活力灵活配置混合C</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004610"><div><span>004610 民生加银鑫信债券A</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004611"><div><span>004611 民生加银鑫信债券C</span></div></a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004614"><div><span>004614 鹏扬利泽债券A</span></div></a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004615"><div><span>004615 鹏扬利泽债券C</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004624"><div><span>004624 博时盈海纯债债券</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004633"><div><span>004633 诺德天利</span></div></a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/fundinfo_n.html?fund_fulltext?004635"><div><span>004635 中信建投睿利C</span></div></a></li>
