--- a/data/data-pool/stock.html
+++ b/data/data-pool/stock.html
@@ -37,7 +37,7 @@
 		<!--
 		-->
 		<div style="margin: 10px 0 0 310px;float: left;height: 50px;width: 185px;">
-			<a href="http://www.cninfo.com.cn/finalpage/2017-04-26/1203391218.PDF" target="_Blank"><img style="height: 50px;width: 185px;" src="/cninfo-new/images/logo66.png" /></a>
+			<a href="http://www.cninfo.com.cn/wechat/tg/tg.html" target="_Blank"><img style="height: 50px;width: 310px;margin-left: -30px;" src="/cninfo-new/images/logo66.png" /></a>
 		</div>
 		<div class="top-search">
 			<form id="topCommonQueryForm" method="get" name="topCommonQueryForm" action="/cninfo-new/fulltextSearch" enctype="multipart/form-data">
@@ -1696,6 +1696,8 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?szsme002873">002873 新天药业</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?szsme002875">002875 安奈儿</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?szsme002876">002876 三利谱</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?szsme002877">002877 智能自控</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?szsme002878">002878 元隆雅图</a></li>
          </ul>
    </div>
    <div id="con-a-3" style="display:none">
@@ -2346,6 +2348,9 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?szcn300658">300658 延江股份</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?szcn300659">300659 中孚信息</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?szcn300660">300660 江苏雷利</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?szcn300661">300661 圣邦股份</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?szcn300662">300662 科锐国际</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/companyinfo_n.html?fulltext?szcn300663">300663 科蓝软件</a></li>
          </ul>
    </div>
    <div id="con-a-4" style="display:none">
@@ -5612,7 +5617,7 @@
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08207">08207 中国信贷</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08211">08211 浙江永安</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08212">08212 誉满国际控股</a></li>
-	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08213">08213 惟膳</a></li>
+	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08213">08213 新智控股</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08215">08215 First Credit</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08217">08217 联旺集团</a></li>
 	         	   <li><a target="_blank" href="http://www.cninfo.com.cn/information/hkinfo_n.html?hk_gem_fulltext?08218">08218 毅高国际控股</a></li>
